Correction contraste orange + html Accueil

--- a/AlexandreRaymond_4_06082021/style.css
+++ b/AlexandreRaymond_4_06082021/style.css
@@ -326,6 +326,7 @@ a:hover {
     float: left;
     margin-top: 4px;
     font-size: 16px;
+    margin-right: 1rem;
 }
 
 .navbar-nav .open .dropdown-menu > li > a {
@@ -771,15 +772,15 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #FF7927;
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #FF7927!important;
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #FF7927;
     color: #FFFFFF!important;
 }
 
@@ -797,7 +798,7 @@ h4 {
 }
 
 .ltc-atomic-tangerine {
-    color: #F3976C!important;
+    color: #FF7927!important;
 }
 
 .ltc-atomic-tangerine:hover {
